Fix a couple of findbugs warnings